--- a/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
+++ b/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
@@ -50,12 +50,12 @@
     </Content>
     <Content Include="Pages\images\brightcove-logo-vertical-grey.png" />
     <Content Include="Pages\images\favicon-32x32.png" />
-    <Content Include="Static\css\main.92fdcc1a.css" />
-    <Content Include="Static\css\vendor.da20cd26.css" />
+    <Content Include="Static\css\main.a1d9c6d4.css" />
+    <Content Include="Static\css\vendor.ee346c07.css" />
     <Content Include="Static\Elements.xml" />
-    <Content Include="Static\js\main.86e1ed74.js" />
-    <Content Include="Static\js\runtime.9c4bdcdc.js" />
-    <Content Include="Static\js\vendor.6ac010a4.js" />
+    <Content Include="Static\js\main.ffb0a648.js" />
+    <Content Include="Static\js\runtime.9c3dbc80.js" />
+    <Content Include="Static\js\vendor.7eece66a.js" />
     <Content Include="Static\media\glyphicons-halflings-regular.89889688.svg" />
     <None Include="BrightcoveRibbonCustomActions\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{81e210bf-25e9-4b1c-b8d6-e6af9ab9aaa9}</SharePointProjectItemId>
@@ -75,11 +75,11 @@
     <Content Include="Pages\Default.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Static\css\main.92fdcc1a.css.map" />
-    <None Include="Static\css\vendor.da20cd26.css.map" />
-    <None Include="Static\js\main.86e1ed74.js.map" />
-    <None Include="Static\js\runtime.9c4bdcdc.js.map" />
-    <None Include="Static\js\vendor.6ac010a4.js.map" />
+    <None Include="Static\css\main.a1d9c6d4.css.map" />
+    <None Include="Static\css\vendor.ee346c07.css.map" />
+    <None Include="Static\js\main.ffb0a648.js.map" />
+    <None Include="Static\js\runtime.9c3dbc80.js.map" />
+    <None Include="Static\js\vendor.7eece66a.js.map" />
     <None Include="Static\media\glyphicons-halflings-regular.448c34a5.woff2" />
     <None Include="Static\media\glyphicons-halflings-regular.e18bbf61.ttf" />
     <None Include="Static\media\glyphicons-halflings-regular.f4769f9b.eot" />
@@ -122,6 +122,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
