--- a/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
+++ b/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
@@ -50,13 +50,22 @@
     </Content>
     <Content Include="Pages\images\brightcove-logo-vertical-grey.png" />
     <Content Include="Pages\images\favicon-32x32.png" />
-    <Content Include="Static\css\main.a1d9c6d4.css" />
-    <Content Include="Static\css\vendor.da20cd26.css" />
     <Content Include="Static\Elements.xml" />
-    <Content Include="Static\js\main.86e63af8.js" />
-    <Content Include="Static\js\runtime.e03e84a5.js" />
-    <Content Include="Static\js\vendor.7eece66a.js" />
+    <Content Include="Static\css\main.a1d9c6d4.css" />
+    <Content Include="Static\css\main.a1d9c6d4.css.map" />
+    <Content Include="Static\css\vendor.da20cd26.css" />
+    <Content Include="Static\css\vendor.da20cd26.css.map" />
+    <Content Include="Static\js\main.ebea1058.js" />
+    <Content Include="Static\js\main.ebea1058.js.map" />
+    <Content Include="Static\js\runtime.54c9d146.js" />
+    <Content Include="Static\js\runtime.54c9d146.js.map" />
+    <Content Include="Static\js\vendor.41167fa3.js" />
+    <Content Include="Static\js\vendor.41167fa3.js.map" />
+    <Content Include="Static\media\glyphicons-halflings-regular.448c34a5.woff2" />
     <Content Include="Static\media\glyphicons-halflings-regular.89889688.svg" />
+    <Content Include="Static\media\glyphicons-halflings-regular.e18bbf61.ttf" />
+    <Content Include="Static\media\glyphicons-halflings-regular.f4769f9b.eot" />
+    <Content Include="Static\media\glyphicons-halflings-regular.fa277232.woff" />
     <None Include="BrightcoveRibbonCustomActions\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{81e210bf-25e9-4b1c-b8d6-e6af9ab9aaa9}</SharePointProjectItemId>
     </None>
@@ -75,15 +84,6 @@
     <Content Include="Pages\Default.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Static\css\main.a1d9c6d4.css.map" />
-    <None Include="Static\css\vendor.da20cd26.css.map" />
-    <None Include="Static\js\main.86e63af8.js.map" />
-    <None Include="Static\js\runtime.e03e84a5.js.map" />
-    <None Include="Static\js\vendor.7eece66a.js.map" />
-    <None Include="Static\media\glyphicons-halflings-regular.448c34a5.woff2" />
-    <None Include="Static\media\glyphicons-halflings-regular.e18bbf61.ttf" />
-    <None Include="Static\media\glyphicons-halflings-regular.f4769f9b.eot" />
-    <None Include="Static\media\glyphicons-halflings-regular.fa277232.woff" />
     <None Include="Static\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{d9be85bd-b70f-4151-bc5e-5f01ee0c84fa}</SharePointProjectItemId>
     </None>
