--- a/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
+++ b/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
@@ -68,8 +68,8 @@
     <Content Include="Static\css\main.e5800cc7.css.map" />
     <Content Include="Static\css\vendor.da20cd26.css" />
     <Content Include="Static\css\vendor.da20cd26.css.map" />
-    <Content Include="Static\js\main.2fa0accf.js" />
-    <Content Include="Static\js\main.2fa0accf.js.map" />
+    <Content Include="Static\js\main.d7c526cd.js" />
+    <Content Include="Static\js\main.d7c526cd.js.map" />
     <Content Include="Static\js\runtime.54c9d146.js" />
     <Content Include="Static\js\runtime.54c9d146.js.map" />
     <Content Include="Static\js\vendor.150f0cd7.js" />
@@ -110,6 +110,8 @@
     <Content Include="MasterPageGallery\Elements.xml" />
     <Content Include="Pages\Elements.xml" />
     <Content Include="Pages\Default.aspx" />
+    <Content Include="Pages\AppPartPage.aspx" />
+    <Content Include="Pages\Experimental.aspx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Static\SharePointProjectItem.spdata">
