--- a/src/bcvc4sp.ProxyAzureFunction/bcvc4sp.ProxyAzureFunction.csproj
+++ b/src/bcvc4sp.ProxyAzureFunction/bcvc4sp.ProxyAzureFunction.csproj
@@ -4,6 +4,8 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.14" />
   </ItemGroup>
   <ItemGroup>
