Set default to *

--- a/src/bcvc4sp.Proxy/Web.config
+++ b/src/bcvc4sp.Proxy/Web.config
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="brightcove:origins" value="http://goof, https://baristalabs-256c21828d90b3.sharepoint.com" />
+    <add key="brightcove:origins" value="*" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
