Add Packaged Releases for proxy

--- a/src/bcvc4sp.Proxy/bcvc4sp.Proxy.csproj
+++ b/src/bcvc4sp.Proxy/bcvc4sp.Proxy.csproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\brightcove-proxy-classic - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
