Update Connector to 4.1.0

--- a/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
+++ b/src/bcvc4sp.Addin/bcvc4sp.Addin.csproj
@@ -65,16 +65,16 @@
     <Content Include="Pages\images\brightcove-logo-vertical-grey.png" />
     <Content Include="Pages\images\favicon-32x32.png" />
     <Content Include="Static\Elements.xml" />
-    <Content Include="Static\css\main.a0580e29.css" />
-    <Content Include="Static\css\main.a0580e29.css.map" />
-    <Content Include="Static\css\vendor.da20cd26.css" />
-    <Content Include="Static\css\vendor.da20cd26.css.map" />
-    <Content Include="Static\js\main.46ab4064.js" />
-    <Content Include="Static\js\main.46ab4064.js.map" />
-    <Content Include="Static\js\runtime.54c9d146.js" />
-    <Content Include="Static\js\runtime.54c9d146.js.map" />
-    <Content Include="Static\js\vendor.b9ff0093.js" />
-    <Content Include="Static\js\vendor.b9ff0093.js.map" />
+    <Content Include="Static\css\2.42178c37.chunk.css" />
+    <Content Include="Static\css\2.42178c37.chunk.css.map" />
+    <Content Include="Static\css\main.b91da288.chunk.css" />
+    <Content Include="Static\css\main.b91da288.chunk.css.map" />
+    <Content Include="Static\js\2.8ae2058c.chunk.js" />
+    <Content Include="Static\js\2.8ae2058c.chunk.js.map" />
+    <Content Include="Static\js\main.2f0211ae.chunk.js" />
+    <Content Include="Static\js\main.2f0211ae.chunk.js.map" />
+    <Content Include="Static\js\runtime-main.ee88d981.js" />
+    <Content Include="Static\js\runtime-main.ee88d981.js.map" />
     <Content Include="Static\media\glyphicons-halflings-regular.448c34a5.woff2" />
     <Content Include="Static\media\glyphicons-halflings-regular.89889688.svg" />
     <Content Include="Static\media\glyphicons-halflings-regular.e18bbf61.ttf" />
